Run GUI manager test in CI